Some issues like js libs fixed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Interactive CV - [Your Name]</title>
+    <title>AM Interactive CV</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- You might add graph-styles.css here too if you separate it -->
     <!-- <link rel="stylesheet" href="css/graph-styles.css"> -->
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <h1>[Your Name] - Interactive CV</h1>
+        <h1>AmirMohammad Ahmadi - Interactive CV</h1>
         <nav id="main-nav">
             <ul>
                 <li><a href="#cybersecurity" data-section="cybersecurity">CyberSecurity</a></li>
@@ -82,7 +82,8 @@
     </footer>
 
     <!-- Load Libraries First -->
-    <script src="js/lib/cytoscape.min.js"></script>
+	<script src="js/lib/cytoscape.min.js"></script>
+    <script src="js/lib/cytoscape-fcose.js"></script> <!-- << ADD THIS LINE -->
     <!-- Then Your Custom Scripts -->
     <script src="js/graph-loader.js"></script>
     <script src="js/main.js"></script>
